--- a/config_repo/provider-service-dev.yml
+++ b/config_repo/provider-service-dev.yml
@@ -4,15 +4,15 @@ eureka:
   client:
     service-url:
       defaultZone: http://localhost:10086/eureka
-spring:
-  datasource:
-    url: jdbc:mysql://localhost:3306/1703a?characterEncoding=utf-8&serverTimezone=UTC
-    username: root
-    password: root
-    driver-class-name: com.mysql.jdbc.Driver
-  jpa:
-    show-sql: true
-    properties:
-      hibernate.format_sql: true  #格式化sql
-    hibernate:
-      ddl-auto: update #自动建表
+#spring:
+#  datasource:
+#    url: jdbc:mysql://localhost:3306/1703a?characterEncoding=utf-8&serverTimezone=UTC
+#    username: root
+#    password: root
+#    driver-class-name: com.mysql.jdbc.Driver
+#  jpa:
+#    show-sql: true
+#    properties:
+#      hibernate.format_sql: true  #格式化sql
+#    hibernate:
+#      ddl-auto: update #自动建表
