--- a/provider_service/pom.xml
+++ b/provider_service/pom.xml
@@ -37,7 +37,7 @@
             <!--<version>1.0.RELEASE</version>-->
         <!--</dependency>-->
 
-        <dependency>
+        <!--<dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
@@ -45,7 +45,7 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-        </dependency>
+        </dependency>-->
 
     </dependencies>
 </project>
