--- a/config_repo/eureka-server-dev.yml
+++ b/config_repo/eureka-server-dev.yml
@@ -5,5 +5,6 @@ eureka:
     service-url:
       defaultZone: http://localhost:10086/eureka
     register-with-eureka: false
+    fetch-registry: true
   instance:
     hostname: localhost
