--- a/consumer_service/pom.xml
+++ b/consumer_service/pom.xml
@@ -46,10 +46,10 @@
         <!--</dependency>-->
 
 
-        <dependency>
+        <!--<dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
-
+-->
     </dependencies>
 </project>
