--- a/consumer_service/pom.xml
+++ b/consumer_service/pom.xml
@@ -38,7 +38,12 @@
             <version>2.0.1.RELEASE</version>
         </dependency>
 
-
+        <!--依赖api-->
+        <dependency>
+            <groupId>com.wxc</groupId>
+            <artifactId>exam_api</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
         <!--<dependency>-->
             <!--<groupId>com.bw</groupId>-->
             <!--<artifactId>common_api</artifactId>-->
