--- a/provider_service/pom.xml
+++ b/provider_service/pom.xml
@@ -30,6 +30,12 @@
             <artifactId>spring-cloud-config-client</artifactId>
             <version>2.0.1.RELEASE</version>
         </dependency>
+        <!--依赖api-->
+        <dependency>
+            <groupId>com.wxc</groupId>
+            <artifactId>exam_api</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
 
         <!--<dependency>-->
             <!--<groupId>com.bw</groupId>-->
