--- a/config_repo/provider-service-dev.yml
+++ b/config_repo/provider-service-dev.yml
@@ -9,7 +9,7 @@ spring:
     url: jdbc:mysql://localhost:3306/1703a?characterEncoding=utf-8&serverTimezone=UTC
     username: root
     password: root
-    driver-class-name: com.mysql.jdbc.Driver.cj
+    driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     show-sql: true
     properties:
